gke/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babynamer-deployment
  labels:
    app: babynamer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: babynamer
  template:
    metadata:
      labels:
        app: babynamer
    spec:
      containers:
      - name: babynamer
        image: us-west1-docker.pkg.dev/sanbeacon-1161/abctools/babynamer:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
