gke/service.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: babynamer
    name: babynamer-svc
spec:
    ports:
    - port: 80
      targetPort: 8080
    selector:
        app: babynamer
    type: NodePort
